force-app/main/default/objects/Product__c/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First-time Buyer</fullName>
            </value>
            <value>
                <fullName>Home Mover</fullName>
            </value>
            <value>
                <fullName>Remortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>