force-app/main/default/objects/Product__c/fields/Has_Product_Fee__c.field-meta.xml
<CustomField>
    <fullName>Has_Product_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Product Fee?</label>
    <type>Checkbox</type>
</CustomField>