force-app/main/default/objects/Product__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 yrs</fullName>
            </value>
            <value>
                <fullName>3 yrs</fullName>
            </value>
            <value>
                <fullName>5 yrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>